chen-k8s-demo/deployment/cheese/cheese-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cheese
spec:
  rules:
  - host: stilton.f5demo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: stilton
          servicePort: http
  - host: cheddar.f5demo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: cheddar
          servicePort: http
  - host: wensleydale.f5demo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wensleydale
          servicePort: http
